--- a/packages/seacas/scripts/exodus-2.py.in
+++ b/packages/seacas/scripts/exodus-2.py.in
@@ -3,8 +3,8 @@ from ctypes import *
 import os
 
 """
-exodus.py v 1.11 (seacas-beta) is a python wrapper of some of the exodus library
-(Python 2 Version) 
+exodus.py v 1.12 (seacas-beta) is a python wrapper of some of the exodus library
+(Python 2 Version)
 
 Copyright(C) 2019 National Technology & Engineering Solutions of
 Sandia, LLC (NTESS).  Under the terms of Contract DE-NA0003525 with
@@ -88,8 +88,14 @@ def getExodusVersion():
         fields = line.split()
         if (len(fields) == 3 and
                 fields[0] == '#define' and
-                fields[1] == 'EX_API_VERS_NODOT'):
-            return int(fields[2])
+                fields[1] == 'EXODUS_VERSION_MAJOR'):
+            version_major = int(fields[2])
+        if (len(fields) == 3 and
+                fields[0] == '#define' and
+                fields[1] == 'EXODUS_VERSION_MINOR'):
+            version_minor = int(fields[2])
+        if (version_major > 0 and version_minor > 0):
+           return 100 * version_major + version_minor
     return 0
 
 ACCESS = os.getenv('ACCESS', '@ACCESSDIR@')
@@ -408,7 +414,7 @@ class exodus:
           e.put_info_ext(self,info_struct)
           -> put initialization information into exodus file
         """
-        if len(p.title)>MAX_LINE_LENGTH: 
+        if len(p.title)>MAX_LINE_LENGTH:
             print('WARNING: Exodus title "%s" exceeds maximum line length (%i). It will be truncated.' %
                   (p.title,MAX_LINE_LENGTH))
             p.title = p.title[-1*MAX_LINE_LENGTH:]
@@ -3595,7 +3601,7 @@ class exodus:
             self.numNodeSets = c_int(0)
             self.numSideSets = c_int(0)
         EXODUS_LIB.ex_get_init(
-            self.fileId, self.Title, 
+            self.fileId, self.Title,
             byref(self.numDim),
             byref(self.numNodes),
             byref(self.numElem),
