--- a/packages/seacas/scripts/exodus-2.py.in
+++ b/packages/seacas/scripts/exodus-2.py.in
@@ -83,6 +83,8 @@ def getExodusVersion():
     Parse the exodusII.h header file and return the version number or 0 if not
     found.
     """
+    version_major = 0
+    version_minor = 0
     ACCESS = os.getenv('ACCESS', '@ACCESSDIR@')
     for line in open(ACCESS + "/include/exodusII.h"):
         fields = line.split()
