IOSS: clean up format_id_list; use and add tests

--- a/packages/seacas/libraries/ioss/src/utest/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/utest/CMakeLists.txt
@@ -1,5 +1,16 @@
 
 TRIBITS_ADD_EXECUTABLE(
+ Utst_ids
+ SOURCES Utst_ids.C
+)
+
+TRIBITS_ADD_TEST(
+	Utst_ids
+	NAME Utst_ids
+	NUM_MPI_PROCS 1
+)
+
+TRIBITS_ADD_EXECUTABLE(
  Utst_ioel
  SOURCES Utst_ioel.C
 )
