--- a/packages/seacas/scripts/exodus-2.py.in
+++ b/packages/seacas/scripts/exodus-2.py.in
@@ -406,6 +406,68 @@ class exodus:
                 self.__ex_inquire_int(
                     ex_inquiry("EX_INQ_TIME")))
 
+    def summarize(self):
+        """
+        Outputs a summary of the exodus file data. Output is similar to:
+        ```
+        Database: base_ioshell_copy.e
+        Title:	GeneratedMesh: 10x10x10+nodeset:xyz+sideset:XYZ+times:5+variables:global,10,elem
+
+        Number of spatial dimensions = 3	                                      	 Number of global variables     = 10
+        Number of node blocks        = 1	 Number of nodes              = 1,331	 Number of nodal variables      =  2
+        Number of element blocks     = 1	 Number of elements           = 1,000	 Number of element variables    =  5
+        Number of node sets          = 3	 Length of node list          =   363	 Number of nodeset variables    =  4
+        Number of element side sets  = 3	 Length of element sides      =   300	 Number of sideset variables    =  3
+
+        Number of time steps         = 5
+        ```
+        """
+
+        total_sides = 0
+        sidesets = self.get_ids('EX_SIDE_SET')
+        for sideset in sidesets:
+            total_sides += self.num_faces_in_side_set(sideset)
+
+        total_ns_nodes = 0
+        nodesets = self.get_ids('EX_NODE_SET')
+        for nodeset in nodesets:
+            total_ns_nodes += self.num_nodes_in_node_set(nodeset)
+
+        num_glo_vars = self.get_variable_number('EX_GLOBAL')
+        num_nod_vars = self.get_variable_number('EX_NODAL')
+        num_ele_vars = self.get_variable_number('EX_ELEM_BLOCK')
+        num_ns_vars = self.get_variable_number('EX_NODE_SET')
+        num_ss_vars = self.get_variable_number('EX_SIDE_SET')
+
+        print("\n Database: {0}\n"
+              " Title:\t{17}\n\n"
+              " Number of spatial dimensions = {1:3d}\t"
+              "                                   {2:11s}\t"
+              " Number of global variables     = {11:6d}\n"
+              " Number of node blocks        = {5:3d}\t"
+              " Number of nodes              = {3:10n}\t"
+              " Number of nodal variables      = {12:6d}\n"
+              " Number of element blocks     = {6:3n}\t"
+              " Number of elements           = {4:10n}\t"
+              " Number of element variables    = {13:6d}\n"
+              " Number of node sets          = {7:3n}\t"
+              " Length of node list          = {9:10n}\t"
+              " Number of nodeset variables    = {14:6d}\n"
+              " Number of element side sets  = {8:3n}\t"
+              " Length of element sides      = {10:10n}\t"
+              " Number of sideset variables    = {15:6d}\n\n"
+              " Number of time steps         = {16:3n}\n"
+              .format(self.fileName,
+                      self.num_dimensions(), "",
+                      self.num_nodes(),
+                      self.num_elems(),
+                      1,
+                      self.num_blks(),
+                      self.num_node_sets(),
+                      self.num_side_sets(),
+                      total_ns_nodes, total_sides,
+                      num_glo_vars, num_nod_vars, num_ele_vars,
+                      num_ns_vars, num_ss_vars, self.num_times(), self.title()))
     #
     # build the info struct
     #
