Make work for both python2 and python3

--- a/SEACAS-Test/Makefile
+++ b/SEACAS-Test/Makefile
@@ -3,7 +3,7 @@ NPROCB = 32
 NPROCC = 33
 
 BIN = ../bin
-PYTHON  =       python3
+PYTHON  =       python
 APREPRO	=	$(BIN)/aprepro
 FASTQ	=	$(BIN)/fastq
 GJOIN	=	$(BIN)/gjoin
