EXODUS: python - fix versioning output [ci skip]

--- a/packages/seacas/scripts/exodus-2.py.in
+++ b/packages/seacas/scripts/exodus-2.py.in
@@ -41,10 +41,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 EXODUS_PY_COPYRIGHT_AND_LICENSE = __doc__
 
-EXODUS_PY_VERSION = "1.11 (seacas-beta)"
+EXODUS_PY_VERSION = "1.13 (seacas-py2)"
 
 EXODUS_PY_COPYRIGHT = """
-You are using exodus.py v 1.11 (seacas-beta), a python wrapper of some of the exodus library.
+You are using exodus.py v 1.13 (seacas-py2), a python wrapper of some of the exodus library.
 
 Copyright (c) 2013, 2014, 2015, 2016, 2017, 2018, 2019 National Technology &
 Engineering Solutions of Sandia, LLC (NTESS).  Under the terms of
