--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,11 +2,11 @@ image: Visual Studio 2019
 
 environment:
   matrix:
-    - TARGET_ARCH: Win64
+    - TARGET_ARCH: x64
       CONDA_INSTALL_LOCN: C:\\Miniconda-x64
       MSYS2_INSTALL_LOCN: C:\msys64
       MSYS2_BIN_LOCN: C:\msys64\usr\bin
-      CMAKE_GENERATOR: "Visual Studio 16 2019"
+      CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
 
 platform:
     - x64
@@ -36,7 +36,7 @@ build: off
 build_script:
   - cmd: mkdir build
   - cmd: cd build
-  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -A "%TARGET_ARCH%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DENABLE_BASH_SCRIPT_TESTING=OFF -DENABLE_FILTER_TESTING=OFF -DENABLE_BYTERANGE=ON
+  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DENABLE_BASH_SCRIPT_TESTING=OFF -DENABLE_FILTER_TESTING=OFF -DENABLE_BYTERANGE=ON
   - cmd: if errorlevel 1 exit 1
   - cmd: cmake --build . --config Release -- /maxcpucount:4
 
