--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
       CONDA_INSTALL_LOCN: C:\\Miniconda-x64
       MSYS2_INSTALL_LOCN: C:\msys64
       MSYS2_BIN_LOCN: C:\msys64\usr\bin
-      CMAKE_GENERATOR: "Visual Studio 16 Win64"
+      CMAKE_GENERATOR: "Visual Studio 15 Win64"
 
 platform:
     - x64
@@ -26,7 +26,7 @@ install:
   - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
   - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true
   - cmd: conda update conda
-  - cmd: conda install hdf5=1.8.18 netcdf
+  - cmd: conda install hdf5=1.8.18 libnetcdf
 
 configuration: Release
 
@@ -36,7 +36,7 @@ build: off
 build_script:
   - cmd: mkdir build
   - cmd: cd build
-  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DENABLE_BASH_SCRIPT_TESTING=OFF -DENABLE_FILTER_TESTING=OFF -DENABLE_BYTERANGE=ON
+  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DENABLE_BASH_SCRIPT_TESTING=OFF -DSEACASProj_ENABLE_SEACAS:BOOL=ON -DSEACASProj_ENABLE_ALL_PACKAGES:BOOL=ON -DSEACASProj_ENABLE_ALL_OPTIONAL_PACKAGES:BOOL=ON -DSEACASProj_ENABLE_SECONDARY_TESTED_CODE:BOOL=ON -D BUILD_SHARED_LIBS:BOOL=ON -D SEACASProj_ENABLE_Zoltan:BOOL=OFF -D SEACASProj_ENABLE_TESTS=ON  -D SEACASProj_SKIP_FORTRANCINTERFACE_VERIFY_TEST:BOOL=ON -D SEACASProj_HIDE_DEPRECATED_CODE:BOOL=ON -D SEACASProj_ENABLE_DOXYGEN:BOOL=OFF -D SEACASProj_ENABLE_Fortran=OFF -D TPL_ENABLE_Netcdf:BOOL=ON -D TPL_ENABLE_Matio:BOOL=OFF -D TPL_ENABLE_CGNS:BOOL=OFF -D TPL_ENABLE_ADIOS2:BOOL=OFF -D TPL_ENABLE_gtest:BOOL=OFF -D TPL_ENABLE_Kokkos:BOOL=OFF -D TPL_ENABLE_MPI:BOOL=OFF -D TPL_ENABLE_Pamgen:BOOL=OFF -D TPL_ENABLE_Pthread:BOOL=OFF -D TPL_ENABLE_X11:BOOL=OFF -D SEACASExodus_ENABLE_THREADSAFE:BOOL=OFF -D SEACASIoss_ENABLE_THREADSAFE:BOOL=OFF
   - cmd: if errorlevel 1 exit 1
   - cmd: cmake --build . --config Release -- /maxcpucount:4
 
