--- a/packages/seacas/scripts/CMakeLists.txt
+++ b/packages/seacas/scripts/CMakeLists.txt
@@ -52,8 +52,9 @@ INCLUDE_DIRECTORIES(
 )
 
 SET(HEADERS "")
-APPEND_GLOB(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/getopt.seacas.c)
 
+IF (NOT CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
+APPEND_GLOB(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/getopt.seacas.c)
 ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASBlot)
 ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASFastq)
 ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASEpu)
@@ -63,6 +64,7 @@ IF (${PROJECT_NAME}_ENABLE_SEACASBlot OR
    ADD_EXECUTABLE(getopt.seacas ${SOURCES}	)
    install_executable(getopt.seacas)
 endif()
+ENDIF()
 
 ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASExodus)
 ASSERT_DEFINED(BUILD_SHARED_LIBS)
