See if can use newer netcdf and hdf5

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,9 +24,10 @@ install:
   - cmd: set INSTALL_LOC=%SRC_DIR%\install
   - cmd: set PATH=%PATH%;%MSYS2_BIN_LOCN%;%INSTALL_LOC%\bin;%INSTALL_LOC%\lib
   - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
-  - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true
+  - cmd: conda config --add channels conda-forge
+  - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true --set channel_priority strict
   - cmd: conda update conda
-  - cmd: conda install hdf5=1.8.18 libnetcdf
+  - cmd: conda install hdf5 libnetcdf
 
 configuration: Release
 
