Fix conda syntax error

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ install:
   - cmd: set PATH=%PATH%;%MSYS2_BIN_LOCN%;%INSTALL_LOC%\bin;%INSTALL_LOC%\lib
   - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
   - cmd: conda config --add channels conda-forge
-  - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true --set channel_priority strict
+  - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true 
   - cmd: conda update conda
   - cmd: conda install hdf5 libnetcdf
 
