EXODUS.PY: Rename files to see if python analyzer will work on commit

--- a/packages/seacas/scripts/CMakeLists.txt
+++ b/packages/seacas/scripts/CMakeLists.txt
@@ -68,10 +68,10 @@ ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASExodus)
 ASSERT_DEFINED(BUILD_SHARED_LIBS)
 IF (${PROJECT_NAME}_ENABLE_SEACASExodus)
    IF (${PythonInterp_FIND_VERSION} VERSION_LESS "3.0")
-      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-2.py.in" )
+      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-2.in.py" )
       MESSAGE(STATUS "A Python-2 version of Exodus.py will be installed.")
    ELSE()
-      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-3.py.in" )
+      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-3.in.py" )
       MESSAGE(STATUS "A Python-3 version of Exodus.py will be installed.")
    ENDIF()
 
