Try specifying specific versions to see if netcdf, hdf5, cgns can coexist

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,10 +27,7 @@ install:
   - cmd: conda config --add channels conda-forge
   - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true 
   - cmd: conda update conda
-  - cmd: conda search libnetcdf --channel conda-forge  
-  - cmd: conda search hdf5 --channel conda-forge  
-  - cmd: conda search cgns --channel conda-forge  
-  - cmd: conda install hdf5 libnetcdf cgns
+  - cmd: conda install hdf5=1.10.5 libnetcdf=4.7.1 cgns=3.4.0
 
 configuration: Release
 
