See if vcpkg has libraries we need [ci skip]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,6 +24,7 @@ install:
   - cmd: set INSTALL_LOC=%SRC_DIR%\install
   - cmd: set PATH=%PATH%;%MSYS2_BIN_LOCN%;%INSTALL_LOC%\bin;%INSTALL_LOC%\lib
   - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
+  - cmd: vcpkg search
   - cmd: conda config --add channels conda-forge
   - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true 
   - cmd: conda update conda
