--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,11 +24,10 @@ install:
   - cmd: set INSTALL_LOC=%SRC_DIR%\install
   - cmd: set PATH=%PATH%;%MSYS2_BIN_LOCN%;%INSTALL_LOC%\bin;%INSTALL_LOC%\lib
   - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
-  - cmd: vcpkg search
+  - cmd: conda update -n base -c defaults conda
   - cmd: conda config --add channels conda-forge
   - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true 
-  - cmd: conda update conda
-  - cmd: conda install hdf5=1.10.5 libnetcdf=4.7.1 cgns=3.4.0
+  - cmd: conda install hdf5=1.10.5 libnetcdf=4.7.1
 
 configuration: Release
 
