--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,9 +24,9 @@ install:
   - cmd: set INSTALL_LOC=%SRC_DIR%\install
   - cmd: set PATH=%PATH%;%MSYS2_BIN_LOCN%;%INSTALL_LOC%\bin;%INSTALL_LOC%\lib
   - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
-  - cmd: conda update -n base -c defaults conda
   - cmd: conda config --add channels conda-forge
   - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true 
+  - cmd: conda update -n base -c defaults conda
   - cmd: conda install hdf5=1.10.5 libnetcdf=4.7.1
 
 configuration: Release
@@ -43,3 +43,4 @@ build_script:
 
 test_script:
   - cmd: cmake --build . --config Release --target install -- /maxcpucount:4
+  - cmd: ctest 
