--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,8 @@ environment:
       MSYS2_INSTALL_LOCN: C:\msys64
       MSYS2_BIN_LOCN: C:\msys64\usr\bin
       CMAKE_GENERATOR: "Visual Studio 15 Win64"
-      SUPPRESSIONS: "/wd4244 /wd4267 /wd4305 /wd4477"
+#      SUPPRESSIONS: "/wd4244 /wd4267 /wd4305 /wd4477"
+      SUPPRESSIONS: "/wd4478"
 
 # 4477: format string 'string' requires an argument of type 'type', but variadic argument number has type 'type'
 # 4244: conversion from 'type1' to 'type2', possible loss of data
