windows: try vcpkg instead of conda for TPL [ci skip]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,11 +30,10 @@ install:
   - cmd: set SRC_DIR=%cd%
   - cmd: set INSTALL_LOC=%SRC_DIR%\install
   - cmd: set PATH=%PATH%;%MSYS2_BIN_LOCN%;%INSTALL_LOC%\bin;%INSTALL_LOC%\lib
-  - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
-  - cmd: conda config --add channels conda-forge
-  - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true 
-  - cmd: conda update -n base -c defaults conda
-  - cmd: conda install libnetcdf
+  - cmd: vcpkg install netcdf-c
+  - cmd: vcpkg install matio
+  - cmd: cd c:\tools\vcpkg
+  - cmd: vcpkg integrate install
 
 configuration: Release
 
