--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,9 +35,11 @@ install:
   - cmd: vcpkg install netcdf-c
   - cmd: vcpkg install matio
   - cmd: vcpkg integrate install
-  - cmd: dir install\bin
-  - cmd: dir install\lib
-  - cmd: dir install\include
+  - cmd: dir
+  - cmd: dir %INSTALL_LOC%
+  - cmd: dir %INSTALL_LOC%\bin
+  - cmd: dir %INSTALL_LOC%\lib
+  - cmd: dir %INSTALL_LOC%\include
   - cmd: vcpkg\packages\netcdf-c_x64-windows\bin\nc-config --all
   
 configuration: Release
