--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,6 @@ environment:
       MSYS2_INSTALL_LOCN: C:\msys64
       MSYS2_BIN_LOCN: C:\msys64\usr\bin
       CMAKE_GENERATOR: "Visual Studio 15 Win64"
-#      SUPPRESSIONS: "/wd4244 /wd4267 /wd4305 /wd4477"
       SUPPRESSIONS: "/wd4478"
       VCPKG_DEFAULT_TRIPLET: "x64-windows"
       VCPKG_BUILD_TYPE: "release"
@@ -40,7 +39,7 @@ install:
   - cmd: dir C:\Tools\vcpkg\installed\x64-windows\include
   - cmd: dir C:\Tools\vcpkg\installed\x64-windows\lib
   - cmd: type C:\Tools\vcpkg\installed\x64-windows\include\netcdf_meta.h
-  - cmd: C:\Tools\vcpkg\installed\x64-windows\bin\nc-config --all
+  - cmd: sh C:\Tools\vcpkg\installed\x64-windows\bin\nc-config --all
     
 configuration: Release
 
