--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,12 +34,9 @@ install:
   - cmd: vcpkg install netcdf-c
   - cmd: vcpkg install matio
   - cmd: vcpkg integrate install
-  - cmd: dir C:\Tools\vcpkg
-  - cmd: dir C:\Tools\vcpkg\installed\x64-windows\bin
-  - cmd: dir C:\Tools\vcpkg\installed\x64-windows\include
-  - cmd: dir C:\Tools\vcpkg\installed\x64-windows\lib
-  - cmd: type C:\Tools\vcpkg\installed\x64-windows\include\netcdf_meta.h
-  - cmd: sh C:\Tools\vcpkg\installed\x64-windows\bin\nc-config --all
+  - cmd: type C:\Tools\vcpkg\installed\x64-windows\bin\nc-config
+  - cmd: sh C:\Tools\vcpkg\installed\x64-windows\bin\nc-config
+  - cmd: sh C:\Tools\vcpkg\installed\x64-windows\bin\nc-config /all
     
 configuration: Release
 
