windows: another try at cgns make [ci skip]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,7 +34,7 @@ install:
   - cmd: cd C:\projects\cgns
   - cmd: mkdir build
   - cmd: cd build
-  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DCGNS_BUILD_SHARED:BOOL=OFF -DCGNS_ENABLE_HDF5:BOOL=ON -DHDF5_NEED_ZLIB:BOOL=ON -DCGNS_ENABLE_64BIT:BOOL=ON -DCGNS_ENABLE_SCOPING:BOOL=ON -DCGNS_ENABLE_FORTRAN:BOOL=OFF -DCGNS_ENABLE_PARALLEL:BOOL=OFF -DCMAKE_PREFIX_PATH:PATH=%LIB_ROOT%\lib -DHDF5_NEED_MPI:BOOL=OFF -DHDF5_IS_PARALLEL:BOOL=OFF -DHDF5_ROOT:PATH=%LIB_ROOT%
+  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DCGNS_BUILD_SHARED:BOOL=OFF -DCGNS_ENABLE_HDF5:BOOL=ON -DHDF5_NEED_ZLIB:BOOL=ON -DCGNS_ENABLE_64BIT:BOOL=ON -DCGNS_ENABLE_SCOPING:BOOL=ON -DCGNS_ENABLE_FORTRAN:BOOL=OFF -DCGNS_ENABLE_PARALLEL:BOOL=OFF -DCMAKE_PREFIX_PATH:PATH=%LIB_ROOT%\lib -DHDF5_NEED_MPI:BOOL=OFF -DHDF5_IS_PARALLEL:BOOL=OFF -DHDF5_DIR:PATH=%LIB_ROOT% -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DHDF5_LIBRARY:PATH=%LIB_ROOT%\lib
   - cmd: cmake --build . --config Release -- /maxcpucount:4
   - cmd: cmake --build . --config Release --target install -- /maxcpucount:4
   - cmd: cd C:\projects\seacas
