--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,11 +34,29 @@ install:
   - cmd: cd C:\projects\cgns
   - cmd: mkdir build
   - cmd: cd build
-  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DCGNS_BUILD_SHARED:BOOL=OFF -DCGNS_ENABLE_HDF5:BOOL=ON -DHDF5_NEED_ZLIB:BOOL=ON -DCGNS_ENABLE_64BIT:BOOL=ON -DCGNS_ENABLE_SCOPING:BOOL=ON -DCGNS_ENABLE_FORTRAN:BOOL=OFF -DCGNS_ENABLE_PARALLEL:BOOL=OFF -DCMAKE_PREFIX_PATH:PATH=%LIB_ROOT%\lib -DHDF5_NEED_MPI:BOOL=OFF -DHDF5_IS_PARALLEL:BOOL=OFF -DHDF5_DIR:PATH=%LIB_ROOT% -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DHDF5_LIBRARY:PATH=%LIB_ROOT%\lib
+  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release ^
+    -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% ^
+    -DCMAKE_PREFIX_PATH:PATH=%LIB_ROOT%\lib ^
+    -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake ^
+    -DCMAKE_STATIC_LINKER_FLAGS:STRING="" ^
+    -DCGNS_USE_SHARED:BOOL=OFF ^
+    -DCGNS_BUILD_SHARED:BOOL=OFF ^
+    -DCGNS_ENABLE_LFS:BOOL=OFF ^
+    -DCGNS_BUILD_CGNSTOOLS:BOOL=OFF ^
+    -DCGNS_ENABLE_HDF5:BOOL=ON ^
+    -DHDF5_NEED_ZLIB:BOOL=ON ^
+    -DCGNS_ENABLE_64BIT:BOOL=ON ^
+    -DCGNS_ENABLE_SCOPING:BOOL=ON ^
+    -DCGNS_ENABLE_FORTRAN:BOOL=OFF ^
+    -DCGNS_ENABLE_PARALLEL:BOOL=OFF ^
+    -DHDF5_NEED_MPI:BOOL=OFF ^
+    -DHDF5_IS_PARALLEL:BOOL=OFF ^
+    -DHDF5_DIR:PATH=%LIB_ROOT% ^
+    -DHDF5_LIBRARY:PATH=%LIB_ROOT%\lib
   - cmd: cmake --build . --config Release -- /maxcpucount:4
   - cmd: cmake --build . --config Release --target install -- /maxcpucount:4
   - cmd: cd C:\projects\seacas
-  
+
 configuration: Release
 
 build: off
@@ -47,10 +65,42 @@ build: off
 build_script:
   - cmd: mkdir build
   - cmd: cd build
-  - cmd: cmake .. -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% -DSEACASProj_ENABLE_SEACAS:BOOL=ON -DSEACASProj_ENABLE_ALL_PACKAGES:BOOL=ON -DSEACASProj_ENABLE_ALL_OPTIONAL_PACKAGES:BOOL=ON -DSEACASProj_ENABLE_SECONDARY_TESTED_CODE:BOOL=ON -D BUILD_SHARED_LIBS:BOOL=OFF -D SEACASProj_ENABLE_Zoltan:BOOL=OFF -D SEACASProj_ENABLE_TESTS=ON  -D SEACASProj_SKIP_FORTRANCINTERFACE_VERIFY_TEST:BOOL=ON -D SEACASProj_HIDE_DEPRECATED_CODE:BOOL=ON -D SEACASProj_ENABLE_DOXYGEN:BOOL=OFF -D SEACASProj_ENABLE_Fortran=OFF -D TPL_ENABLE_Netcdf:BOOL=ON -D TPL_ENABLE_Matio:BOOL=ON -D TPL_ENABLE_CGNS:BOOL=ON -D TPL_ENABLE_ADIOS2:BOOL=OFF -D TPL_ENABLE_gtest:BOOL=OFF -D TPL_ENABLE_Kokkos:BOOL=OFF -D TPL_ENABLE_MPI:BOOL=OFF -D TPL_ENABLE_Pamgen:BOOL=OFF -D TPL_ENABLE_Pthread:BOOL=OFF -D TPL_ENABLE_X11:BOOL=OFF -D SEACASExodus_ENABLE_THREADSAFE:BOOL=OFF -D SEACASIoss_ENABLE_THREADSAFE:BOOL=OFF -DCMAKE_CXX_FLAGS="%SUPPRESSIONS% /EHsc" -DCMAKE_C_FLAGS="%SUPPRESSIONS%" -DMatio_LIBRARIES:PATH=%LIB_ROOT%\lib\libmatio.lib -DMatio_INCLUDE_DIRS:PATH=%LIB_ROOT%\include -DNetCDF_ROOT:PATH=%LIB_ROOT% -DHDF5_ROOT:PATH=%LIB_ROOT% -DCGNS_ROOT:PATH=%LIB_ROOT% 
+  - cmd: cmake .. -G "%CMAKE_GENERATOR%" ^
+    -DBUILD_SHARED_LIBS:BOOL=OFF ^
+    -DCGNS_ROOT:PATH=%LIB_ROOT% ^
+    -DCMAKE_BUILD_TYPE=Release ^
+    -DCMAKE_CXX_FLAGS="%SUPPRESSIONS% /EHsc" ^
+    -DCMAKE_C_FLAGS="%SUPPRESSIONS%" ^
+    -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% ^
+    -DHDF5_ROOT:PATH=%LIB_ROOT% ^
+    -DMatio_INCLUDE_DIRS:PATH=%LIB_ROOT%\include ^
+    -DMatio_LIBRARIES:PATH=%LIB_ROOT%\lib\libmatio.lib ^
+    -DNetCDF_ROOT:PATH=%LIB_ROOT% ^
+    -DSEACASExodus_ENABLE_THREADSAFE:BOOL=OFF ^
+    -DSEACASIoss_ENABLE_THREADSAFE:BOOL=OFF ^
+    -DSEACASProj_ENABLE_ALL_OPTIONAL_PACKAGES:BOOL=ON ^
+    -DSEACASProj_ENABLE_ALL_PACKAGES:BOOL=ON ^
+    -DSEACASProj_ENABLE_DOXYGEN:BOOL=OFF ^
+    -DSEACASProj_ENABLE_Fortran=OFF ^
+    -DSEACASProj_ENABLE_SEACAS:BOOL=ON ^
+    -DSEACASProj_ENABLE_SECONDARY_TESTED_CODE:BOOL=ON ^
+    -DSEACASProj_ENABLE_TESTS=ON ^
+    -DSEACASProj_ENABLE_Zoltan:BOOL=OFF ^
+    -DSEACASProj_HIDE_DEPRECATED_CODE:BOOL=ON ^
+    -DSEACASProj_SKIP_FORTRANCINTERFACE_VERIFY_TEST:BOOL=ON ^
+    -DTPL_ENABLE_ADIOS2:BOOL=OFF ^
+    -DTPL_ENABLE_CGNS:BOOL=ON ^
+    -DTPL_ENABLE_Kokkos:BOOL=OFF ^
+    -DTPL_ENABLE_MPI:BOOL=OFF ^
+    -DTPL_ENABLE_Matio:BOOL=ON ^
+    -DTPL_ENABLE_Netcdf:BOOL=ON ^
+    -DTPL_ENABLE_Pamgen:BOOL=OFF ^
+    -DTPL_ENABLE_Pthread:BOOL=OFF ^
+    -DTPL_ENABLE_X11:BOOL=OFF ^
+    -DTPL_ENABLE_gtest:BOOL=OFF
 
   - cmd: if errorlevel 1 exit 1
-  - cmd: cmake --build . --config Release -- /maxcpucount:4
+  - cmd: cmake --build . --config %configuration% -- /maxcpucount:4
 
 test_script:
-  - cmd: ctest 
+  - cmd: ctest
