--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,6 +31,8 @@ install:
   - cmd: vcpkg install matio
   - cmd: vcpkg integrate install
   - cmd: dir C:\Tools\vcpkg\installed\x64-windows\lib
+  - cmd: dir C:\Tools\vcpkg\installed\x64-windows\bin
+  - cmd: DUMPBIN /SYMBOLS C:\Tools\vcpkg\installed\x64-windows\lib\libhdf5.lib
   - cmd: git clone https://github.com/cgns/CGNS C:\projects\cgns
   - cmd: cd C:\projects\cgns
   - cmd: mkdir build
