--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,6 +41,7 @@ install:
      -DCMAKE_PREFIX_PATH:PATH=%LIB_ROOT%\lib ^
      -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake ^
      -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% ^
+     -DCMAKE_C_FLAGS="/D H5_BUILT_AS_STATIC_LIB /U H5_BUILT_AS_DYNAMIC_LIB" ^
      -DCGNS_BUILD_SHARED:BOOL=OFF ^
      -DCGNS_USE_SHARED:BOOL=OFF ^
      -DCGNS_ENABLE_LFS:BOOL=OFF ^
