windows: fix library path [ci skip]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
       MSYS2_BIN_LOCN: C:\msys64\usr\bin
       CMAKE_GENERATOR: "Visual Studio 15 Win64"
       SUPPRESSIONS: "/wd4478"
-      VCPKG_DEFAULT_TRIPLET: "x64-windows"
+      VCPKG_DEFAULT_TRIPLET: "x64-windows-static"
       VCPKG_BUILD_TYPE: "release"
       LIB_ROOT: C:\Tools\vcpkg\installed\%VCPKG_DEFAULT_TRIPLET%
 
@@ -27,12 +27,12 @@ install:
   - cmd: set SRC_DIR=%cd%
   - cmd: set INSTALL_LOC=%SRC_DIR%\install
   - cmd: set PATH=%PATH%;%MSYS2_BIN_LOCN%;%INSTALL_LOC%\bin;%INSTALL_LOC%\lib
-  - cmd: vcpkg install netcdf-c:x64-windows-static
-  - cmd: vcpkg install matio:x64-windows-static
+  - cmd: vcpkg install netcdf-c:%VCPKG_DEFAULT_TRIPLET%
+  - cmd: vcpkg install matio:%VCPKG_DEFAULT_TRIPLET%
   - cmd: vcpkg integrate install
-  - cmd: dir C:\Tools\vcpkg\installed\x64-windows\lib
-  - cmd: dir C:\Tools\vcpkg\installed\x64-windows\bin
-  - cmd: type C:\Tools\vcpkg\installed\x64-windows\lib\libhdf5.settings
+  - cmd: dir C:\Tools\vcpkg\installed\%VCPKG_DEFAULT_TRIPLET%\lib
+  - cmd: dir C:\Tools\vcpkg\installed\%VCPKG_DEFAULT_TRIPLET%\bin
+  - cmd: type C:\Tools\vcpkg\installed\%VCPKG_DEFAULT_TRIPLET%\lib\libhdf5.settings
   - cmd: git clone https://github.com/cgns/CGNS C:\projects\cgns
   - cmd: cd C:\projects\cgns
   - cmd: mkdir build
