--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,31 +32,6 @@ install:
   - cmd: vcpkg integrate install
   - cmd: dir C:\Tools\vcpkg\installed\%VCPKG_DEFAULT_TRIPLET%
   - cmd: dir C:\Tools\vcpkg\installed\%VCPKG_DEFAULT_TRIPLET%\lib
-  - cmd: git clone https://github.com/cgns/CGNS C:\projects\cgns
-  - cmd: cd C:\projects\cgns
-  - cmd: mkdir build
-  - cmd: cd build
-  - cmd: cmake .. -G "%CMAKE_GENERATOR%" ^
-     -DCMAKE_BUILD_TYPE=Release ^
-     -DCMAKE_PREFIX_PATH:PATH=%LIB_ROOT% ^
-     -DCMAKE_INSTALL_PREFIX=%INSTALL_LOC% ^
-     -DCMAKE_C_FLAGS="/D H5_BUILT_AS_STATIC_LIB" ^
-     -DCGNS_BUILD_SHARED:BOOL=OFF ^
-     -DCGNS_USE_SHARED:BOOL=OFF ^
-     -DCGNS_ENABLE_LFS:BOOL=OFF ^
-     -DCGNS_BUILD_CGNSTOOLS:BOOL=OFF ^
-     -DCGNS_ENABLE_HDF5:BOOL=ON ^
-     -DHDF5_NEED_ZLIB:BOOL=ON ^
-     -DCGNS_ENABLE_64BIT:BOOL=ON ^
-     -DCGNS_ENABLE_SCOPING:BOOL=ON ^
-     -DCGNS_ENABLE_FORTRAN:BOOL=OFF ^
-     -DCGNS_ENABLE_PARALLEL:BOOL=OFF ^
-     -DHDF5_NEED_MPI:BOOL=OFF ^
-     -DHDF5_DIR:PATH=%LIB_ROOT% ^
-     -DHDF5_LIBRARY:PATH=%LIB_ROOT%\lib\libhdf5.lib
-  - cmd: cmake --build . --config Release -- /maxcpucount:4
-  - cmd: cmake --build . --config Release --target install -- /maxcpucount:4
-  - cmd: cd C:\projects\seacas
 
 configuration: Release
 
@@ -68,7 +43,6 @@ build_script:
   - cmd: cd build
   - cmd: cmake .. -G "%CMAKE_GENERATOR%" ^
      -DBUILD_SHARED_LIBS:BOOL=OFF ^
-     -DCGNS_ROOT:PATH=C:/projects/seacas/install ^
      -DCMAKE_BUILD_TYPE=Release ^
      -DCMAKE_CXX_FLAGS="%SUPPRESSIONS% /EHsc" ^
      -DCMAKE_C_FLAGS="%SUPPRESSIONS%" ^
@@ -95,7 +69,7 @@ build_script:
      -DSEACASProj_HIDE_DEPRECATED_CODE:BOOL=ON ^
      -DSEACASProj_SKIP_FORTRANCINTERFACE_VERIFY_TEST:BOOL=ON ^
      -DTPL_ENABLE_ADIOS2:BOOL=OFF ^
-     -DTPL_ENABLE_CGNS:BOOL=ON ^
+     -DTPL_ENABLE_CGNS:BOOL=OFF ^
      -DTPL_ENABLE_Kokkos:BOOL=OFF ^
      -DTPL_ENABLE_MPI:BOOL=OFF ^
      -DTPL_ENABLE_Matio:BOOL=ON ^
